tests/integration_tests/snapshots/integration__integration_tests__git_error_display__uncommitted_changes_with_force_hint.snap
---
source: tests/integration_tests/git_error_display.rs
expression: err.render()
---
[31m✗[39m [31mCannot remove worktree: [1mfeature-branch[22m has uncommitted changes[39m
[2m↳[22m [2mCommit or stash changes first, or to lose uncommitted changes, run [4mwt remove --force feature-branch[24m[22m
