tests/integration_tests/snapshots/integration__integration_tests__git_error_display__uncommitted_changes_with_worktree.snap
---
source: tests/git_error_display.rs
expression: err.to_string()
---
❌ [31mCannot remove worktree: [1mfeature-branch[22m has uncommitted changes[39m

💡 [2mCommit or stash changes first[22m
