tests/integration_tests/snapshots/integration__integration_tests__git_error_display__worktree_creation_failed.snap
---
source: tests/integration_tests/git_error_display.rs
expression: err.render()
---
[31m✗[39m [31mFailed to create worktree for [1mfeature-y[22m from base [1mmain[22m[39m
[107m [0m fatal: '/tmp/repo.feature-y' already exists
