tests/integration_tests/snapshots/integration__integration_tests__git_error_display__worktree_creation_failed_with_command.snap
---
source: tests/integration_tests/git_error_display.rs
expression: err.render()
---
[31m✗[39m [31mFailed to create worktree for [1mfix[22m from base [1mmain[22m[39m
[107m [0m Preparing worktree (new branch 'fix')
[107m [0m fatal: cannot lock ref 'refs/heads/fix'
[2m↳[22m [2mFailed command, [4mexit code 128[24m:[22m
[107m [0m [2m[0m[2m[34mgit[0m[2m worktree add /tmp/repo.fix [0m[2m[36m-b[0m[2m fix main[0m
