tests/integration_tests/snapshots/integration__integration_tests__git_error_display__worktree_missing.snap
---
source: tests/integration_tests/git_error_display.rs
expression: err.render()
---
[31m✗[39m [31mWorktree directory missing for [1mstale-branch[22m[39m
[2m↳[22m [2mTo clean up, run [4mgit worktree prune[24m[22m
