tests/integration_tests/snapshots/integration__integration_tests__git_error_display__worktree_path_exists.snap
---
source: tests/integration_tests/git_error_display.rs
expression: err.render()
---
[31m✗[39m [31mDirectory already exists: [1m/tmp/repo.feature[22m[39m
[2m↳[22m [2mTo remove manually, run [4mrm -rf /tmp/repo.feature[24m; to overwrite (with backup), run [4mwt switch --clobber feature[24m[22m
