tests/integration_tests/snapshots/integration__integration_tests__git_error_display__worktree_path_mismatch.snap
---
source: tests/git_error_display.rs
expression: err.to_string()
---
❌ [31mAmbiguous: [1m/tmp/repo.feature[22m has a worktree on a different branch, but branch [1mfeature[22m exists at [1m/tmp/repo.other[22m[39m

💡 [2mUse [90mwt list[39m to see worktree-branch mappings[22m
