tests/integration_tests/snapshots/integration__integration_tests__git_error_display__worktree_path_occupied.snap
---
source: tests/integration_tests/git_error_display.rs
expression: err.render()
---
[31m✗[39m [31mCannot switch to [1mfeature-z[22m — there's a worktree at the expected path [1m/tmp/repo.feature-z[22m on branch [1mother-branch[22m[39m
[2m↳[22m [2mTo switch the worktree at [4m/tmp/repo.feature-z[24m to [4mfeature-z[24m, run [4mcd /tmp/repo.feature-z && git switch feature-z[24m[22m
