tests/integration_tests/snapshots/integration__integration_tests__git_error_display__worktree_removal_failed.snap
---
source: tests/integration_tests/git_error_display.rs
expression: err.render()
---
[31m✗[39m [31mFailed to remove worktree for [1mfeature-x[22m @ [1m/tmp/repo.feature-x[22m[39m
[107m [0m fatal: worktree is dirty
[107m [0m error: could not remove worktree
